cka/exam-workload/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-httpd
  labels:
    k8s-app: dp-httpd
  annotations:
    version: task1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
      - name: container-http
        image: httpd:2.4
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      restartPolicy: Always
