cka/exam-workload/deployment-v8-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-env-secretref
  labels:
    k8s-app: dp-env-secretref
  annotations:
    version: task8
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: busy
  template:
    metadata:
      labels:
        app: busy
    spec:
      containers: 
      - name: busybox
        image: busybox
        imagePullPolicy: IfNotPresent
        command:
        - printenv
        resources:
          requests:
            cpu: 200m
      restartPolicy: Always
