cka/exam-workload/deployment-v8.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-env-vars
  labels:
    k8s-app: deploy-env-vars
  annotations:
    version: task8
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: busy
  template:
    metadata:
      labels:
        app: busy
    spec:
      containers:
      - name: busybox
        image: busybox
        imagePullPolicy: IfNotPresent
        command:
        - printenv
      restartPolicy: Always
