cka/exam-workload/pod-v10.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-init-container
  labels:
    k8s-app: pod-init-container
  annotations:
    version: task10
spec:
  containers:
  - name: http
    image: httpd:2.4
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: index
      mountPath: /usr/local/apache2/htdocs
  restartPolicy: Never
  volumes:
  - name: index
    emptyDir: {}
